# ai-cli-installer

./: AGENTS.md  Cargo.toml  Makefile  README.md  TODO.md  rustfmt.toml
docs/: todo.md
src/: actions.rs  cli.rs  main.rs  versions.rs
src/tools/: factory.rs  mod.rs  opencode.rs
