[package]
name = "ai-cli-apps"
version = "0.1.0"
edition = "2024"

[lints.clippy]
all = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
colored = "3.0.0"
anyhow = "1.0.100"
futures = "0.3.31"
indicatif = "0.18"
inquire = "0.9.1"

[dev-dependencies]
httpmock = "0.8"
